Added links to cases

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Лабораторные работы по веб-програмиированию</h1>
     <h3>Ниже ищи ссылки на работы</h3>
+    <a href="Case 1/index.html">Ссылка на первую лабораторную</a>
+    <a href="Case 2/index.html">Ссылка на вторую лабораторную</a>
 </body>
 </html>
