--- a/Case 2/index.html
+++ b/Case 2/index.html
@@ -20,6 +20,14 @@
             приписаться введенная информация. Не используйте метод document.write. При проверке данных на корректность
             используйте исключения.</p>
         <a href="task_1.html">Перейти на страницу с заданием</a>
+        <h2>Задание 2</h2>
+        <p>Создать веб-страницу, содержащую несколько заголовков с блоками текста под ними. По нажатию на заголовок
+            нижележащий блок текста должен исчезать/появляться.</p>
+        <a href="task_2.html">Перейти на страницу с заданием</a>
+        <h2>Задание 3</h2>
+        <p>Отобразить таблицу, фоны ячеек которой окрашены в web-гарантированные цвета. По щелчку левой кнопки мыши
+            на образце цвета изменяется цвет текста документа, по щелчку правой кнопки мыши — цвет фона документа</p>
+        <a href="task_3.html">Перейти на страницу с заданием</a>
     </article>
 
     <script src="js/scripts.js"></script>
