--- a/Case 2/index.html
+++ b/Case 2/index.html
@@ -28,6 +28,30 @@
         <p>Отобразить таблицу, фоны ячеек которой окрашены в web-гарантированные цвета. По щелчку левой кнопки мыши
             на образце цвета изменяется цвет текста документа, по щелчку правой кнопки мыши — цвет фона документа</p>
         <a href="task_3.html">Перейти на страницу с заданием</a>
+        <h2>Задание 4</h2>
+        <p>Разработать выплывающее меню</p>
+        <a href="task_4.html">Перейти на страницу с заданием</a>
+        <h2>Задание 5</h2>
+        <p>Запрограммируйте поле для ввода текста так, чтобы в него нельзя было вписать заглавные буквы латинского
+            алфавита. </p>
+        <a href="task_5.html">Перейти на страницу с заданием</a>
+        <h2>Задание 6</h2>
+        <p>Разработайте «след мыши» — серию картинок, которые следовали за курсором при его движении по странице. </p>
+        <a href="task_6.html">Перейти на страницу с заданием</a>
+        <h2>Задание 7</h2>
+        <p>Разработать веб-страницу с анимацией, состоящей из быстрой смены изображений (с использованием таймера)</p>
+        <a href="task_7.html">Перейти на страницу с заданием</a>
+        <h2>Задание 8</h2>
+        <p>Разработать «Карусель» – ленту изображений, которую можно листать влево-вправо нажатием на стрелочки.</p>
+        <a href="task_8.html">Перейти на страницу с заданием</a>
+        <h2>Задание 9</h2>
+        <p>Разработать веб-страницу с несколькими картинками, вставленными в текст HTML. По нажатию на картинку
+            показывать всплывающее окно для просмотра увеличенной картинки</p>
+        <a href="task_9.html">Перейти на страницу с заданием</a>
+        <h2>Задание 10</h2>
+        <p>Создайте обработчик события на нажатие кнопок направлений (влево, вправо) так, чтобы HTML-элемент при
+            однократном нажатии на кнопку анимированно сдвигался влево или вправо на 100px</p>
+        <a href="task_10.html">Перейти на страницу с заданием</a>
     </article>
 
     <script src="js/scripts.js"></script>
